--- a/s202350101/src/main/resources/static/common/css/common.css
+++ b/s202350101/src/main/resources/static/common/css/common.css
@@ -13,6 +13,14 @@
 	font-weight: bold;
 }
 
+.font-cate {
+	color: #0dcaf0;
+}
+
+.font-subject {
+	color: #0d6efd;
+}
+
 /* 프레임을 좌우 나누고 싶을때 */
 .frame_set {
 	display: flex;
